fix/ sorting logic added to getStats, tests updated, codeStyle fixes