@@ -2,7 +2,8 @@ package ru.practicum.stats_server.service;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import ru.practicum.stats_dto.StatsRequestDto;
 import ru.practicum.stats_dto.StatsResponseDto;
@@ -10,6 +11,7 @@ import ru.practicum.stats_server.model.Stats;
 import ru.practicum.stats_server.repository.StatsRepository;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -29,7 +31,8 @@ class StatsServerServiceTest {
 
     @Test
     void addStats_whenValidDto_thenStatsSaved() {
-        StatsRequestDto dto = new StatsRequestDto("TestApp", "/test/uri", "192.168.1.1", LocalDateTime.now());
+        StatsRequestDto dto = new StatsRequestDto("TestApp", "/test/uri", "192.168.1.1",
+                LocalDateTime.now());
         Stats savedStats = new Stats();
         savedStats.setApp(dto.getApp());
         savedStats.setUri(dto.getUri());
@@ -49,12 +52,12 @@ class StatsServerServiceTest {
         LocalDateTime start = LocalDateTime.now().minusDays(1);
         LocalDateTime end = LocalDateTime.now();
         StatsResponseDto responseDto = new StatsResponseDto("TestApp", "/test/uri", 5L);
-        when(statsRepository.findStatsSummaryBetween(start, end, null)).thenReturn(List.of(responseDto));
-
+        when(statsRepository.findStatsSummaryBetween(start, end, null))
+                .thenReturn(new ArrayList<>(List.of(responseDto)));
         List<StatsResponseDto> actualStats = statsServerService.getStats(start, end, null, false);
 
         assertEquals(1, actualStats.size());
-        assertEquals(responseDto, actualStats.getFirst());
+        assertEquals(responseDto, actualStats.get(0)); // Изменено на get(0)
         verify(statsRepository, times(1)).findStatsSummaryBetween(start, end, null);
     }
 
@@ -64,13 +67,15 @@ class StatsServerServiceTest {
         LocalDateTime end = LocalDateTime.now();
         String[] uris = {"/test/uri"};
         StatsResponseDto responseDto = new StatsResponseDto("TestApp", "/test/uri", 3L);
-        when(statsRepository.findUniqueIpStatsSummaryBetween(start, end, List.of(uris))).thenReturn(List.of(responseDto));
+        when(statsRepository.findUniqueIpStatsSummaryBetween(start, end, List.of(uris)))
+                .thenReturn(new ArrayList<>(List.of(responseDto)));
 
         List<StatsResponseDto> actualStats = statsServerService.getStats(start, end, uris, true);
 
         assertEquals(1, actualStats.size());
-        assertEquals(responseDto, actualStats.getFirst());
-        verify(statsRepository, times(1)).findUniqueIpStatsSummaryBetween(start, end, List.of(uris));
+        assertEquals(responseDto, actualStats.get(0)); // Изменено на get(0)
+        verify(statsRepository, times(1))
+                .findUniqueIpStatsSummaryBetween(start, end, List.of(uris));
     }
 
     @Test
@@ -79,12 +84,13 @@ class StatsServerServiceTest {
         LocalDateTime end = LocalDateTime.now();
         String[] uris = {"/test/uri"};
         StatsResponseDto responseDto = new StatsResponseDto("TestApp", "/test/uri", 4L);
-        when(statsRepository.findStatsSummaryBetween(start, end, List.of(uris))).thenReturn(List.of(responseDto));
+        when(statsRepository.findStatsSummaryBetween(start, end, List.of(uris)))
+                .thenReturn(new ArrayList<>(List.of(responseDto)));
 
         List<StatsResponseDto> actualStats = statsServerService.getStats(start, end, uris, false);
 
         assertEquals(1, actualStats.size());
-        assertEquals(responseDto, actualStats.getFirst());
+        assertEquals(responseDto, actualStats.get(0)); // Изменено на get(0)
         verify(statsRepository, times(1)).findStatsSummaryBetween(start, end, List.of(uris));
     }
 }
